--- a/res/index.html
+++ b/res/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<a-scene lost>
-			<a-entity id="player" position="9 0 30" camera="userHeight:1.6" wasd-controls="" rotation="0 0 0" look-controls="" class="global">
+			<a-entity id="player" position="9 0 30" camera="userHeight:1.6" rotation="0 0 0" look-controls="" class="global">
 				<a-entity class="cursor"
 					cursor="fuse: true; fuseTimeout: 500;" position="0 0 -1" 
 					geometry="primitive:circle; radius: 0.2;"
